[tool.poetry]
name = "mutil"
version = "1.5.1"
description = "mutil — matt's utilities"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
websockets = "^11.0.3"
aiofiles = "^23.1.0"
ulid-py = "^1.1.0"
setproctitle = "^1.2.2"
python-prctl = {version = "^1.8.1", platform = "linux"}

# NOTE: be careful with `poetry add orjson@latest` to update because it
#       will remove this entire check and just reinstall orjson as a top-level
#       dependency without any conditional matching.
[tool.poetry.dependencies.orjson]
# pin orjson to cpython only since it's not supported under pypy
# (and pypy has better JIT-powered JSON anyway)
version = "^3.6.7"
markers = "platform_python_implementation == 'CPython'"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
pytest = "^7.0.1"
types-requests = "^2.27.10"
types-aiofiles = "^23.1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
